Create Post Dialog and Post grid are working fine right now. (Image issue fixed)